# attendance-stamping_withKosuGit_ver02

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: security_regression.yml
.github/workflows/: audit-retention.yml  sec011-issue-triage.yml  security-issue-triage-report.yml
ci/: policy_check.py
docs/: README.md  development.md  operations-spec.md  runbook_audit_retention.md  security.md
src/attendance/: api.py  models.py  repository.py  tables.py
src/business/: api.py  models.py  repository.py  tables.py
src/education/: models.py  repository.py  tables.py
src/shared/: api_auth.py  api_handlers.py  audit.py  auth.py  auth_endpoints.py  csp_report.py  csrf.py  error_handling.py  exceptions.py  fastapi_response_adapter.py  rbac.py  repository.py  security.py  security_config.py  session.py  tables.py
src/shared/database/: __init__.py  base.py  connection.py
src/web/: fastapi_app.py
tests/: test_api_auth.py  test_api_handlers.py  test_attendance_api.py  test_audit.py  test_auth.py  test_business_api.py  test_csp_report.py  test_error_handling.py  test_fastapi_app.py  test_fastapi_response_adapter.py  test_policy_check.py  test_rbac.py  test_security_config.py  test_security_regression.py  test_session.py
