[project]
name = "business-management-system"
version = "0.1.0"
description = "中小企業向け業務管理システム（日報・売上・人件費・原価管理、シフト・出退勤管理、教育コンテンツ管理）"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0",  # データ暗号化
    "sqlalchemy>=2.0",     # ORM
    "alembic>=1.13",       # マイグレーション
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "UP017"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
